--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Function
+name: Deploy Edge Function
 
 on:
   workflow_dispatch:
@@ -15,7 +15,6 @@ jobs:
 
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      PROJECT_ID: vcdtctgenstlqmcmmtjc
       FUNCTION_NAME: ${{ inputs.actualFunction }}
 
     steps:
