--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,7 @@ jobs:
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       FUNCTION_NAME: ${{ inputs.actualFunction }}
+      PROJECT_ID: ${{ env.PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v3
@@ -23,4 +24,4 @@ jobs:
         with:
           version: 1.33.0
 
-      - run: supabase functions deploy $FUNCTION_NAME --import-map ./supabase/functions/import_map.json --project-ref ${{ env.PROJECT_ID }}
+      - run: supabase functions deploy $FUNCTION_NAME --import-map ./supabase/functions/import_map.json --project-ref $PROJECT_ID
